@@ -17,3 +17,4 @@ Documention/Output/**
 Documentation/Output
 _UpgradeReport_Files
 VS.targets
+**/*.sln.cache
