@@ -205,6 +205,7 @@
     <Compile Include="Source\common\QueryNormalizer.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Source\TableCache.cs" />
     <Compile Include="Source\MySqlTrace.cs" />
     <Compile Include="Source\TimedStream.cs" />
     <Compile Include="Source\TracingDriver.cs" />
